<resources>
    <string name="net_error">无可用网络</string>
    <string name="net_time_out">请求超时,稍后再试</string>
    <string name="request_time_out">请求异常,稍后再试</string>

    <!--首页-->
    <string name="app_name">励生活</string>
    <string name="save">保存</string>
    <string name="no_services_list">没有功能服务</string>
    <string name="get_belong_orga_false">获取所属组织失败,请稍后再试</string>
    <string name="get_orga_service_false">获取组织功能列表失败,请稍后再试</string>


    <!--登录界面-->
    <string name="moble_num">手机号</string>
    <string name="login_pwd">励生活登录密码</string>
    <string name="login">登录</string>
    <string name="reg">切换地址</string>
    <string name="login_res">请重新登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_false">登录失败</string>

    <!--注册界面-->
    <string name="nick_name">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称</string>
    <string name="username">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code">通&#160;&#160;行&#160;&#160;证</string>
    <string name="pwd">登录密码</string>
    <string name="user_reg">用户注册</string>

    <string name="reg_et1">例如 "哈哈"</string>
    <string name="reg_et2">请输入手机号</string>
    <string name="reg_et3">请输入验证码</string>
    <string name="reg_et4">需组合数字,字母,符号</string>


    <!--个人中心-->
    <string name="person_center_title">个人中心</string>
    <string name="personal_info">个人资料</string>
    <string name="account_safe">账户与安全</string>
    <string name="account_message">消息中心</string>
    <string name="belong">当前所在组织</string>
    <string name="change_password">修改登录密码</string>
    <string name="accounts">帐号</string>
    <string name="old_password">原密码：</string>
    <string name="new_password">新密码：</string>
    <string name="etd_old_password">请输入原密码</string>
    <string name="etd_new_password">请输入新密码</string>

    <!--个人资料-->
    <string name="person_img">头像</string>
    <string name="person_name">名称</string>


    <!--账户与安全-->
    <string name="logout">退出登录</string>


    <!--系统配置-->
    <string name="system_config">系统配置</string>
    <string name="organization">组织机构</string>
    <string name="role_manager">职位管理</string>
    <string name="staff_manager">员工管理</string>
    <string name="module_manager">模块管理</string>
    <string name="module_manager_desc">可以新增模块</string>

    <!--组织机构管理-->
    <string name="add">新增</string>
    <!--新增组织-->
    <string name="add_orgi">新增组织</string>
    <string name="edit_orgi">编辑组织</string>
    <string name="add_orgi_success">新增组织成功</string>
    <string name="add_orgi_false">新增组织成功</string>
    <string name="delete_orgi_success">删除组织成功</string>
    <string name="put_orgi_success">更新组织成功</string>
    <string name="head_portrait">图标</string>
    <string name="orgi_name">组织名称</string>
    <string name="orgi_desc">组织描述</string>
    <string name="orgi_et1">请输入你的组织名</string>
    <string name="orgi_et2">请输入你的组织描述</string>
    <string name="belong_department">部门列表</string>
    <string name="extend_fatfer">继承自父组织</string>
    <string name="not_orginame_empty">输入不能为空</string>
    <string name="orga_icon_upload_success">组织图标上传成功</string>
    <string name="orga_icon_upload_false">组织图标上传失败</string>
    <!--新增部门-->
    <string name="add_department">新增部门</string>
    <string name="dept_role_list">职位列表</string>
    <string name="empty_parent_dept">父组织部门为空</string>
    <string name="empty_child_dept">子组织部门为空</string>
    <string name="put_department_success">更新部门成功</string>
    <string name="put_department_false">更新部门失败</string>
    <string name="add_department_success">新增部门成功</string>
    <string name="add_department_false">新增部门失败</string>
    <string name="depar_name">部门名称</string>
    <string name="depar_et1">请输入你的部门名称</string>
    <string name="depar_desc">部门描述</string>
    <string name="depar_et2">请输入你的部门描述</string>
    <string name="depar_duty">部门职务</string>
    <!--新增职务-->
    <string name="add_duty">新增职位</string>
    <string name="position_name">职位名称</string>
    <string name="position_name_et1">请输入职位名称</string>
    <string name="position_duty">职位职务</string>


    <!--部门管理-->
    <string name="dept_add">新增部门</string>
    <string name="dept_edit">部门编辑</string>
    <string name="delete_dept_success">删除部门成功</string>
    <!--部门新增-->
    <string name="empty_parent_role">父组织职务为空</string>
    <string name="empty_child_role">当前部门职务为空</string>
    <string name="edit_dept">编辑部门</string>
    <string name="dept_name">部门名称</string>
    <string name="dept_add_role">新增职位</string>
    <string name="dept_et1">请输入你的部门名</string>
    <string name="dept_detail">部门描述</string>
    <string name="dept_et2">请输入此部门的描述</string>
    <string name="dept_icon_upload_success">部门图标上传成功</string>
    <string name="dept_icon_upload_false">部门图标上传失败</string>
    <!--新增部门职位-->
    <string name="role_et1">请输入职位的名称</string>
    <string name="role_namee">职位名称</string>
    <string name="role_desc">职位描述</string>
    <string name="role_et2">请输入职位的描述</string>
    <!--部门编辑-->
    <string name="delete_dept_role_false">删除部门职务失败</string>

    <!--模块管理-->
    <string name="service_add">新增功能</string>
    <string name="service_edit">功能编辑</string>
    <string name="delete_orgservice_success">删除功能成功</string>
    <string name="add_orgservice_success">添加功能成功</string>
    <string name="add_orgservice_false">添加功能失败</string>
    <string name="add_orgservice_icon_false">添加功能图标失败</string>
    <string name="add_orgservice_icon_success">添加功能图标成功</string>
    <!--新增功能-->
    <string name="service_name">功能名称</string>
    <string name="service_et1">请输入你的功能名</string>
    <string name="service_detail">功能详情</string>
    <string name="service_et2">请输入此功能的描述</string>
    <string name="service_height">高度</string>
    <string name="service_wigth">宽度</string>
    <string name="service_line">行</string>
    <string name="service_column">列</string>
    <string name="service_choise">功能选择</string>
    <string name="service_hint">隐藏</string>


    <!--职位管理-->
    <string name="role_add">新增职位</string>
    <string name="role_edit">职位编辑</string>
    <string name="delete_orgRole_success">刪除职位成功</string>
    <!--新增职位-->
    <string name="role_name">职位名称</string>
    <string name="add_orgRole_success">添加职位成功</string>
    <string name="empty_authrovity_list">权限列表为空</string>
    <string name="role_name_et1">请输入你的职位名</string>
    <string name="role_authority_list">权限列表</string>
    <!--新增权限-->
    <string name="authority_add">新增权限</string>


    <!--员工管理-->
    <string name="staff_add">新增员工</string>
    <string name="staff_edit">员工编辑</string>
    <string name="delete_staff_success">刪除员工成功</string>
    <!--新增员工-->
    <string name="staff_name">姓名</string>
    <string name="staff_photo">照片</string>
    <string name="staff_username">登录名</string>
    <string name="staff_password">密码</string>
    <string name="staff_name_eet1">请输入姓名</string>
    <string name="staff_name_eet2">请输入登录名</string>
    <string name="staff_name_eet3">请输入密码</string>
    <string name="staff_department_list">部门列表</string>
    <string name="belong_role">所属职位</string>
    <string name="belong_dept">所属部门</string>
    <string name="choise_belong_dept">选择所属部门</string>
    <string name="staff_add_department">所属部门</string>
    <string name="empty_orgi_list">没有任何所属组织</string>
    <string name="delete_belong_dept">警告：该员工的所属部门\n以及所属职位都将被删除</string>


    <!--权限-->
    <string name="no_view_permissoion">对不起,你不具备查看权限</string>
    <string name="empty_depart_list">部门列表为空</string>
    <string name="empty_role_list">职位列表为空</string>
    <string name="Write_Open">暂未开放</string>
    <string name="delete_dept_false">删除部门失败</string>
    <string name="dept_manager">部门管理</string>

    <!--自定义dialog-->
    <string name="config">确定</string>
    <string name="cancle">取消</string>


    <!--信息管理-->
    <!--信息中心-->
    <string name="message_info">信息中心</string>
    <string name="message_delete">删除信息</string>
    <string name="message_main">我的信息</string>
    <string name="message_about">关于我的</string>
    <string name="message_type_delete">删除该类别</string>
    <string name="message_type_edit">修改该类别</string>
    <!--发布消息-->
    <string name="message_title">标题</string>
    <string name="message_title_et">请输入标题</string>
    <string name="message_content">内容</string>
    <string name="message_content_et">请输入内容</string>
    <string name="message_allow_review">允许他人评论</string>
    <string name="message_is_cat">是否为类别</string>
    <string name="message_publish">发表</string>

    <!--信息详情-->
    <string name="message_add_review">添加评论</string>

    <!--权限-->
    <string name="no_permission">对不起，您没有权限</string>
    <string name="check_permission_false">权限检查失败,请稍后再试</string>


    <!--alertDialog-->
    <string name="confire_delete">确定删除?</string>
    <string name="isInhe_can_not_operate">对不起,当前部门数据来自父组织,不允许操作。</string>
    <string name="isInhe_copy_role_operate">注意!当前操作会把父组织职位复制到当前组织,确定?</string>
    <string name="isInhe_copy_dept_operate">注意!当前操作会把父组织部门复制到当前组织,确定?</string>
    <string name="title_activity_list_role">ListRoleActivity</string>
    <string name="title_activity_manager_message">ManagerMessageActivity</string>

</resources>
