<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    
<com.lilun.passionlife.cloudplatform.custom_view.RegItemView
    android:id="@+id/reg_nick_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    app:reg_title="@string/nick_name"
    app:reg_hint="@string/reg_et1"
    />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.lilun.passionlife.cloudplatform.custom_view.RegItemView
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:reg_title="@string/username"
        app:reg_hint="@string/reg_et2"
        />

        <Button
            android:id="@+id/btn_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/default_black"
            android:paddingTop="8dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="8dp"
            android:layout_alignBottom="@id/reg_username"
            android:text="@string/get_auth_code"

            android:background="@drawable/btn_auth_code"/>

    </RelativeLayout>

    <com.lilun.passionlife.cloudplatform.custom_view.RegItemView
        android:id="@+id/reg_auth_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:reg_title="@string/auth_code"
        app:reg_hint="@string/reg_et3"
        />

    <com.lilun.passionlife.cloudplatform.custom_view.RegItemView
        android:id="@+id/reg_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:reg_title="@string/pwd"
        app:reg_hint="@string/reg_et4"
        />

</LinearLayout>
