<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_white"

    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/head"
            style="@style/def_textview"
            android:layout_centerVertical="true"
            android:text="@string/head_portrait"/>
        <com.lilun.passionlife.cloudplatform.custom_view.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/head"
            android:layout_marginLeft="50dp"
            android:src="@drawable/head_portrait"/>
    </RelativeLayout>

    <com.lilun.passionlife.cloudplatform.custom_view.RegItemView
        android:id="@+id/input_orgi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:reg_title="@string/position_name"
        app:reg_hint="@string/position_name_et1"
        />
    <com.lilun.passionlife.cloudplatform.custom_view.ExtendItem
        android:id="@+id/exv_add_orgi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        app:extend_title="@string/position_duty"
        app:extend_hint="@string/extend_fatfer"
        app:is_show_add_btn="false"
        >

    </com.lilun.passionlife.cloudplatform.custom_view.ExtendItem>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        style="@style/btn_green"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
         />

</RelativeLayout>
