<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/back_gray">

    <View
        android:layout_marginTop="20dp"
        style="@style/line_gray"/>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/default_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/default_black"
           android:text="@string/old_password"/>

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:textColor="@color/default_black"
            android:textColorHint="@color/default_tv_gray"
            android:hint="@string/etd_old_password"
            />

    </LinearLayout>
    <View
        style="@style/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@color/default_white"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/default_black"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:textColor="@color/default_black"
            android:textColorHint="@color/default_tv_gray"
            android:hint="@string/etd_new_password"
            />

    </LinearLayout>
    <View
        style="@style/line_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="密码有6-20位英文字符、数字或符号组成"/>

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/config"
        android:textColor="@color/default_white"
        android:textSize="@dimen/title_size"
        android:background="@drawable/shape_corner_solid_green" />


</LinearLayout>